# Amosworkbenchproject

./: .gitignore  AmosWorkbenchproject.kdev4  CMakeLists.txt  README.markdown  README.md  SuperBuild.cmake  includes-kdev.txt
Modules/AmosWorkbenchLib/: .directory  CMakeLists.txt  amosModuleActivator.cpp  amositkimageio.cpp  amositkimageio.h  amosniftiimageio.cpp  amosniftiimageio.h  amosprocesscase.cpp  amosprocesscase.h  amosprocesscaseparallel.cpp  amosprocesscaseparallel.h  amosprocesscasethreaded.cpp  amosprocesscasethreaded.h  amosprocessdirectory.cpp  amosprocessdirectory.h  dataorientation.h  files.cmake  imagefilters.cpp  imagefilters.hpp  internalprocesscase.cpp  internalprocesscase.h  internalprocessdirectory.cpp  internalprocessdirectory.h  itkHierarchicalQueue.h  itkSkeletonizeBaseImageFilter.cxx  itkSkeletonizeBaseImageFilter.h  itkSpecialSkeletonPointsImageFilter.cxx  itkSpecialSkeletonPointsImageFilter.h  levenbergmarquardt.cpp  levenbergmarquardt.hpp  logsender.cpp  logsender.h  regionproperties.cpp  regionproperties.h  svmclassifier.cpp  svmclassifier.h  tests.cpp  tests.hpp  utils.cpp  utils.hpp  (+2 more)
Modules/AmosWorkbenchLib/Interactions/: Pick.xpm  diffslicelistoperation.cpp  diffslicelistoperation.h  diffslicelistoperationapplier.cpp  diffslicelistoperationapplier.h  frombc2ac.xpm  mitkFromBCToACTool.cpp  mitkFromBCToACTool.h  mitkeraseregiontool3d.cpp  mitkeraseregiontool3d.h  myMitkPickingTool.cpp  myMitkPickingTool.h  myMitkSetRegionTool.cpp  myMitkSetRegionTool.h
Modules/AmosWorkbenchLib/Resources/: .directory  svmtest.model  svmtest.scale
Modules/AmosWorkbenchLib/libsvm/: .directory  CMakeLists.txt
Modules/ContrastEnhancement/: CMakeLists.txt  contrastprocesscase.cpp  contrastprocesscase.h  contrastprocesscaseparallel.cpp  contrastprocesscaseparallel.h  contrastprocesscasethreaded.cpp  contrastprocesscasethreaded.h  contrastprocessdirectory.cpp  contrastprocessdirectory.h  files.cmake
Modules/ContrastEnhancement/edison/edge/: .directory  BgDefaults.h  BgEdge.cpp  BgEdgeDetect.cpp  BgEdgeDetect.h  BgGlobalFc.cpp
Modules/ContrastEnhancement/edison/prompt/: defs.h  edison.cpp  edison.h  (+4 more)
Plugins/amosworkbenchproject.plugin/: .directory  CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/amosworkbenchproject.plugin/resources/: .directory  base.html  icon.xpm  plugin-resources.qrc  processdata.apd  svmtest2D.model  svmtest2D.scale  svmtest3D.model  svmtest3D.scale
Plugins/amosworkbenchproject.plugin/src/: .directory  QmitkSegmentationPreferencePage.cpp  QmitkSegmentationPreferencePage.h
(+179 files in other folders)
